examples/test/testpolicy17901.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17901
  namespace: namespace259
spec:
  podSelector:
    matchLabels:
      key5: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value33
          key36: value28
      podSelector:
        matchLabels:
          key31: value5
          key3: value42
